--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Yerdos",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
